# Inteli-College-2024-2A-T03-ES11-G01

./: README.md  test_file.json
.github/workflows/: release.yml
docs/: analise_exploratoria.md  arquitetura_dados.md  arquitetura_negocio.md  design.md  devops.md  modelagem_fisica.sql  readme.md  template_arquitetura.md
docs/R notebooks/: produto.Rmd
src/: .gitignore  readme.md
src/backend/: Dockerfile  app.py  database.py  models.py  pyproject.toml  routes.py  utils.py
src/backend/tests/: database_test.py  models_test.py  utils_test.py
src/data_pipeline/: Dockerfile  README.MD  app.py  pyproject.toml
src/data_pipeline/core/: .coverage  clickhouse_client.py  data_processing.py  pipeline_cross-sell.py  pipeline_etl.py  pipeline_etl2.py  pipeline_projection.py  pipeline_substitute.py  report.html  supabase_client.py  teste.ipynb  threads.py
src/data_pipeline/core/models/: knn.py  radom_forest.py  regression_linear.py
src/data_pipeline/sql/: create_table_gold.sql  create_view.sql
src/data_pipeline/tests/: clickhouse_test.py  data_processing_test.py  supabase_test.py
src/deploy/: .env.example  README.md  docker-compose.yml  makefile
src/frontend/: Dockerfile  README.md  login.py  pyproject.toml
src/frontend/.streamlit/: config.toml
src/frontend/components/: card.py
src/frontend/pages/: home_gerente.py  home_vendedor.py  insights_vendas.py  sales_projection.py
src/infra/: .env.example  README.md  docker-compose.yml
