[tool.poetry]
name = "pages"
version = "0.1.0"
description = "DataLoom frontend"
authors = ["Ana Clara Zaidan <ana.zaidan@sou.inteli.edu.br.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.25.0"
plotly = "^5.24.1"
streamlit-shadcn-ui = "^0.1.18"
streamlit-js-eval = "^0.1.7"
numerize = "^0.12"

[tool.poetry.dev-dependencies]
flake8 = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"